# unisafe-skills

./: .gitignore  M0_dataset_unified_sample.jsonl  M0_guard_output_sample.jsonl  M0_接口约定.md  M1_SPEC.md  M1_summary.md  M1_待甲确认.md  M1_方向B_实验计划.md  M2_SPEC.md  M2_summary.md  M2_方向B_实验计划.md  M3.5_SPEC.md  M3.5_summary.md  M3.6_SPEC.md  M3.6_summary.md  M3.7_summary.md  M3_SPEC.md  M3_summary.md  README.md  REPRODUCTION.md  团队分工计划.md  待甲确认.md  报告大纲.md  甲已干活.md
guard-llama-guard/: README.md  SKILL.md  manifest.yaml  pyproject.toml  requirements-api.txt  requirements-core.txt  requirements-llama.txt  requirements-llm-judge.txt  requirements-vllm.txt  requirements-wildguard.txt  requirements.txt
guard-llama-guard/assets/: category_mapping.json  rule_keywords.json
guard-llama-guard/examples/: input.sample.jsonl  input_example.jsonl  metrics.sample.json  metrics.sample.m2.json  output.sample.jsonl  tiny_unified.jsonl
guard-llama-guard/references/: INDEX.md  ablations.md  best-known-config.md  calibration-notes.md  category_mapping.json  io-contract.md  llama-guard-notes.md  llm-judge-notes.md  metrics-definitions.md  schema.md  trigger-eval.md
guard-llama-guard/reports/: M1_summary.md
guard-llama-guard/schemas/: guard_output.schema.json
guard-llama-guard/scripts/: calibrate.py  main.py  metrics.py  utils.py  validate.py
guard-llama-guard/templates/: env.template  report-section.md
guard-llama-guard/tests/: test_basic.py  test_calibrate.py  test_judge_concurrency.py  test_llama_threshold.py  test_llm_judge.py  test_metrics.py  test_openai_guard.py  test_repro.py  (+2 more)
(+110 files in other folders)
