[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "guard-llama-guard"
version = "0.1.0"
description = "Unified text safety guard skill: rule baseline + Llama Guard 3 (+ LLM-judge / WildGuard extensions)"
requires-python = ">=3.9"
# Runtime deps are intentionally layered (requirements-*.txt); Core-Minimal is stdlib-only.

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
